Scaffolding and additional code structure. More documentation in README.md abut what to expect from library

--- a/package.json
+++ b/package.json
@@ -23,4 +23,7 @@
     "url": "https://github.com/gsearched/annotate-csv/issues"
   },
   "homepage": "https://github.com/gsearched/annotate-csv#readme"
+  "dependencies": {
+    "csv-parser": "^2.3.0",
+  }
 }
